fix: card preview scrollbar (#8542)

--- a/frontend/src/metadata/views/card/card-items/card-item/index.css
+++ b/frontend/src/metadata/views/card/card-items/card-item/index.css
@@ -52,7 +52,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  padding: 16px 6px 0 16px;
+  padding: 16px;
   overflow-y: auto;
   overflow-x: hidden;
   scrollbar-width: thin;
@@ -78,26 +78,28 @@
 .sf-metadata-card-item-image-scroll-wrapper::-webkit-scrollbar-thumb {
   background: transparent;
   border-radius: 3px;
-  background-clip: padding-box;
 }
 
 .sf-metadata-card-item-image-scroll-wrapper.show-scrollbar::-webkit-scrollbar-thumb {
   background: rgba(0, 0, 0, 0.2);
-  border: 1px solid transparent;
-  background-clip: padding-box;
+}
+
+.sf-metadata-card-item-image-scroll-wrapper.show-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(0, 0, 0, 0.3);
 }
 
 [data-bs-theme="dark"] .sf-metadata-card-item-image-scroll-wrapper.show-scrollbar::-webkit-scrollbar-thumb {
   background: rgba(255, 255, 255, 0.2);
-  border: 1px solid transparent;
-  background-clip: padding-box;
+}
+
+[data-bs-theme="dark"] .sf-metadata-card-item-image-scroll-wrapper.show-scrollbar::-webkit-scrollbar-thumb:hover {
+  background: rgba(255, 255, 255, 0.3);
 }
 
 .sf-metadata-card-item-image-scroll-wrapper .sf-metadata-card-item-doc-thumbnail {
   width: 100%;
   height: auto;
   display: block;
-  padding-bottom: 16px;
   object-fit: contain;
   object-position: top center;
 }
